removed some css which solved the double scrollbar issue

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -25,10 +25,7 @@ body{
 /***************************************/
 #content{
 	position: relative;
-	top: 60px;
-	padding: 0px;
-	display: block;
-	z-index: 0;
+	padding: 0;
 }
 #content.main{
 	left: 40%;
